; ModuleID = '/home/carl/AnghaBench/darwin-xnu/tests/extr_turnstiles_test.c_take_lock_check_priority.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/tests/extr_turnstiles_test.c_take_lock_check_priority.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [55 x i8] c"thread(%llu) priority before acquiring the lock is %d\0A\00", align 1
@.str.1 = private unnamed_addr constant [68 x i8] c"thread(%llu) priority after acquiring the lock (uncontended) is %d\0A\00", align 1
@.str.2 = private unnamed_addr constant [59 x i8] c"thread(%llu) priority after contention by 47 thread is %d\0A\00", align 1
@.str.3 = private unnamed_addr constant [49 x i8] c"thread(%llu) priority after dropping lock is %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*)* @take_lock_check_priority to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @take_lock_check_priority(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %9 = call i32 (...) @mach_thread_self()
  %10 = call i32 @get_pri(i32 %9)
  store i32 %10, i32* %3, align 4
  %11 = load i8*, i8** %2, align 8
  %12 = ptrtoint i8* %11 to i32
  store i32 %12, i32* %8, align 4
  %13 = call i32 @pthread_threadid_np(i32* null, i32* %7)
  %14 = load i32, i32* %3, align 4
  %15 = load i32, i32* %7, align 4
  %16 = load i32, i32* %3, align 4
  %17 = call i32 @T_ASSERT_EQ(i32 %14, i32 37, i8* getelementptr inbounds ([55 x i8], [55 x i8]* @.str, i64 0, i64 0), i32 %15, i32 %16)
  %18 = load i32, i32* %8, align 4
  %19 = call i32 @turnstile_prim_lock(i32 %18)
  %20 = call i32 (...) @mach_thread_self()
  %21 = call i32 @get_pri(i32 %20)
  store i32 %21, i32* %4, align 4
  %22 = load i32, i32* %4, align 4
  %23 = load i32, i32* %7, align 4
  %24 = load i32, i32* %4, align 4
  %25 = call i32 @T_ASSERT_EQ(i32 %22, i32 37, i8* getelementptr inbounds ([68 x i8], [68 x i8]* @.str.1, i64 0, i64 0), i32 %23, i32 %24)
  %26 = call i32 @sleep(i32 8)
  %27 = call i32 (...) @mach_thread_self()
  %28 = call i32 @get_pri(i32 %27)
  store i32 %28, i32* %5, align 4
  %29 = load i32, i32* %5, align 4
  %30 = load i32, i32* %7, align 4
  %31 = load i32, i32* %5, align 4
  %32 = call i32 @T_ASSERT_EQ(i32 %29, i32 47, i8* getelementptr inbounds ([59 x i8], [59 x i8]* @.str.2, i64 0, i64 0), i32 %30, i32 %31)
  %33 = load i32, i32* %8, align 4
  %34 = call i32 @turnstile_prim_unlock(i32 %33)
  %35 = call i32 (...) @mach_thread_self()
  %36 = call i32 @get_pri(i32 %35)
  store i32 %36, i32* %6, align 4
  %37 = load i32, i32* %6, align 4
  %38 = load i32, i32* %7, align 4
  %39 = load i32, i32* %6, align 4
  %40 = call i32 @T_ASSERT_EQ(i32 %37, i32 37, i8* getelementptr inbounds ([49 x i8], [49 x i8]* @.str.3, i64 0, i64 0), i32 %38, i32 %39)
  ret i8* null
}

declare dso_local i32 @get_pri(i32) #1

declare dso_local i32 @mach_thread_self(...) #1

declare dso_local i32 @pthread_threadid_np(i32*, i32*) #1

declare dso_local i32 @T_ASSERT_EQ(i32, i32, i8*, i32, i32) #1

declare dso_local i32 @turnstile_prim_lock(i32) #1

declare dso_local i32 @sleep(i32) #1

declare dso_local i32 @turnstile_prim_unlock(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
